<resources>
    <string name="app_name">Whissage</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="signIn">Sign in</string>
    <string name="enterMessage">Enter message</string>
    <string name="send">Send</string>
    <string name="testMessage">Hi, my message</string>
    <string name="time">11:00 PM</string>
    <string name="todo">TODO</string>
</resources>
